--- a/src/lib/scss/styles.scss
+++ b/src/lib/scss/styles.scss
@@ -85,6 +85,9 @@ textarea {
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
 	box-shadow: none;  
+	border-radius: 0;
+	-webkit-appearance: none;
+	-webkit-border-radius: 0;
 }
 
 /* width */
