added api key system

--- a/src/lib/scss/vars.scss
+++ b/src/lib/scss/vars.scss
@@ -10,6 +10,8 @@ $color-theme-purple: #b3a2b1;
 $color-theme-white: #ecece7;
 $color-theme-black: #000;
 
+$color-theme-red-action: #9a343a;
+
 //FONT
 $font-display: "neue-haas-grotesk-display", Arial, -apple-system, sans-serif;
 $font-text: "neue-haas-grotesk-text", Arial, -apple-system, sans-serif;
